--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -14,6 +14,7 @@
         android:gravity="center"
         android:text="check"
         android:background="#99666666"
+        android:fontFamily="sans-serif-thin"
         android:textColor="#FFFFFF"
         android:textSize="50sp" />
 
