--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,16 +5,20 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
 
 
     tools:context="com.example.pagerank.themovieapp.LoginActivity">
     <com.facebook.login.widget.LoginButton
+        android:layout_gravity="center"
         android:gravity="center"
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
+        android:layout_margin="20dp"
         android:layout_height="wrap_content"
         />
     <Button
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btn_guest"
