--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,17 @@
 
 
     tools:context="com.example.pagerank.themovieapp.LoginActivity">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="40sp"
+        android:gravity="center"
+        android:text="Way2 Movie App"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:src="@drawable/front_logo" />
     <com.facebook.login.widget.LoginButton
         android:layout_gravity="center"
         android:gravity="center"
